@@ -28,6 +28,7 @@ Bugs fixed:
 - 2984214 double free error cimXmlGen.c: triggered by AssocatorNames
 - 2978514 Compilation with --enable-jdbc fails
 - 2979043 Fix leak in msgqueue.c during an error condition
+- 2979036 Always reset lexer and add error handing to activateFilter()
 
 Changes in 1.3.7
 ================
